# nu_plugin_explore_ir

./: Cargo.toml  README.md
src/: data.rs  main.rs  ui.rs
