[package]
name = "nu_plugin_explore_ir"
version = "0.3.0"
authors = ["Devyn Cairns <devyn.cairns@gmail.com>"]
edition = "2021"
description = "a nushell plugin called explore_ir"
repository = "https://github.com/devyn/nu_plugin_explore_ir"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# for local development, you can use a path dependency
# nu-plugin = { path = "../nushell/crates/nu-plugin" }
# nu-protocol = { path = "../nushell/crates/nu-protocol", features = ["plugin"] }
nu-plugin = "0.98.0"
nu-protocol = { version = "0.98.0", features = ["plugin"] }

ratatui = "0.27.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"

[dev-dependencies]
nu-plugin-test-support = { path = "../nushell/crates/nu-plugin-test-support" }
# nu-plugin-test-support = { version = "0.95.0" }
